--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "compile": "webpack",
     "copy": "cpx 'src/**/*.{html,png,jpg}' dist --watch",
     "copyjs": "cpx 'vendor/**/*.*' 'dist/vendor' --watch",
-    "styles": "node-sass --watch scss -o dist/css",
+    "css-compile": "node-sass --output dist/css scss",
+    "css-watch": "npm run css-compile && npm run css-compile -- -w",
     "serve": "browser-sync start --server 'dist' --cwd --files 'dist' --notify 'false'",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "concurrently 'npm:copy' 'npm:compile' 'npm:styles' 'npm:serve'",
+    "dev": "concurrently 'npm:copy' 'npm:compile' 'npm:css-watch' 'npm:serve'",
     "devot": "concurrently \"npm:compile\""
   },
   "keywords": [],
