--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "TotemPole3D",
+  "name": "New THREEJS project kickstart",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
